--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io/tomadamatkinson-actions/github-docker-repository
+          registry: ghcr.io/tomatkinsonarm/temporary-container-test
           username: ${{ github.actor }}
           password: ${{ secrets.PAT }}
 
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Image
-        run: docker build -t ghcr.io/${{ github.repository }}:${{ github.event.inputs.tag }} .
+        run: docker build -t ghcr.io/tomatkinsonarm/temporary-container-test:${{ github.event.inputs.tag }} .
 
       - name: Push Image
-        run: docker image push ghcr.io/${{ github.repository }}:${{ github.event.inputs.tag }}
+        run: docker image push ghcr.io/tomatkinsonarm/temporary-container-test:${{ github.event.inputs.tag }}
