--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -14,11 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io/tomatkinsonarm/temporary-container-test
-          username: ${{ github.actor }}
-          password: ${{ secrets.PAT }}
+        run: echo ${{ secrets.PAT }} | docker login ghcr.io --username ${{ github.actor }} --password-stdin
 
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -28,3 +24,6 @@ jobs:
 
       - name: Push Image
         run: docker image push ghcr.io/tomatkinsonarm/temporary-container-test:${{ github.event.inputs.tag }}
+
+      - name: Logout
+        run: docker logout ghcr.io
